[gd_scene load_steps=3 format=2]

[ext_resource path="res://TelaNovaGodot.gd" type="Script" id=1]
[ext_resource path="res://Botton.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="lista_pronta" type="Button" parent="."]
margin_left = 420.0
margin_top = 35.0
margin_right = 634.0
margin_bottom = 107.0
text = "ANTES DE TUDO clique aqui "
script = ExtResource( 2 )

[node name="dado1" type="LineEdit" parent="."]
margin_left = 95.0
margin_top = 150.0
margin_right = 345.0
margin_bottom = 238.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 414.0
margin_top = 151.0
margin_right = 640.0
margin_bottom = 239.0

[node name="dado3" type="LineEdit" parent="."]
margin_left = 721.0
margin_top = 152.0
margin_right = 939.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="."]
margin_left = 158.0
margin_top = 108.0
margin_right = 290.0
margin_bottom = 173.0
text = "
Dado 1"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 454.0
margin_top = 109.0
margin_right = 586.0
margin_bottom = 174.0
text = "
Dado 2"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 763.0
margin_top = 109.0
margin_right = 895.0
margin_bottom = 174.0
text = "
Dado 3"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 149.0
margin_top = 270.0
margin_right = 880.0
margin_bottom = 443.0

[node name="lista1" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.0352941, 0, 0, 1 )
self_modulate = Color( 0.0352941, 0, 0, 1 )
margin_left = 30.0
margin_top = 26.0
margin_right = 696.0
margin_bottom = 154.0

[node name="lista_usuario" type="Button" parent="."]
margin_left = 80.0
margin_top = 489.0
margin_right = 287.0
margin_bottom = 563.0
text = "mostrar lista"

[node name="texto" type="Button" parent="."]
margin_left = 412.0
margin_top = 484.0
margin_right = 631.0
margin_bottom = 562.0
text = "feedback"

[node name="numero" type="Button" parent="."]
margin_left = 719.0
margin_top = 481.0
margin_right = 928.0
margin_bottom = 561.0
text = "?"

[connection signal="pressed" from="lista_pronta" to="." method="_on_listapronta_pressed"]
[connection signal="pressed" from="lista_usuario" to="." method="_on_lista_usuario_pressed"]
[connection signal="pressed" from="texto" to="." method="_on_texto_pressed"]
[connection signal="pressed" from="numero" to="." method="_on_numero_pressed"]
